--- a/src/WSP/AdminBundle/Resources/views/layout/footer.html.twig
+++ b/src/WSP/AdminBundle/Resources/views/layout/footer.html.twig
@@ -1,7 +1,7 @@
 <!-- BEGIN FOOTER -->
 <div class="footer">
     <div class="footer-inner">
-        2014 &copy; World Sticker Price di Giacomo Orlandi - Via di Montenero, 324 57128 Livorno - P.IVA 01633260490
+        2014 &copy; World Sticker Price di Giacomo Orlandi - Via di Montenero, 324 - 57128 Livorno (Italia) - P.IVA 01633260490
     </div>
     <div class="footer-tools">
         <span class="go-top">
