fix per errori registrazione

--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -1,5 +1,6 @@
 {% set nocostumizerstyle = false %}
 {% extends "MetronicAdminBundle::base.html.twig" %}
+{% block title %}World Sticker Price{% endblock title %}
 {% block basecss %}
     {% include "MetronicAdminBundle::layout/stylesheets.html.twig" %}
     <link href="/bundles/ephputility/css/utility.css" rel="stylesheet" type="text/css"/>
