--- a/app/Resources/views/email.html.twig
+++ b/app/Resources/views/email.html.twig
@@ -1,2 +1,3 @@
 {% set nocostumizerstyle = false %}
 {% extends "MetronicAdminBundle::email.html.twig" %}
+{% block title %}World Sticker Price{% endblock title %}
