--- a/src/WSP/ACLBundle/Resources/views/Registration/register_content.html.twig
+++ b/src/WSP/ACLBundle/Resources/views/Registration/register_content.html.twig
@@ -14,7 +14,7 @@
         <button id="register-back-btn" type="button" class="btn pull-left">
             <i class="m-icon-swapleft"></i> {{ 'commons.back'|trans({}, 'WSPACL') }}
         </button>
-        <button type="submit" id="register-submit-btn" class="btn blue pull-right">
+        <button type="button" id="register-submit-btn" class="btn blue pull-right">
             {{ 'registration.submit'|trans({}, 'FOSUserBundle') }} <i class="m-icon-swapright m-icon-white"></i>
         </button>            
     </div>
