--- a/src/Metronic/AdminBundle/Resources/views/form/empty.html.twig
+++ b/src/Metronic/AdminBundle/Resources/views/form/empty.html.twig
@@ -15,7 +15,7 @@
 
 {% block form_row %}
 {% spaceless %}
-    <div class="form-group" {% if errors|length > 0 %}has-error{% endif %}>
+    <div class="form-group {% if errors|length > 0 %}has-error{% endif %}">
         {{ form_label(form) }}
         <div class="input-icon">
             {% if attr.icon is defined %}
