--- a/src/WSP/PromoBundle/Resources/views/Contatto/index.html.twig
+++ b/src/WSP/PromoBundle/Resources/views/Contatto/index.html.twig
@@ -15,6 +15,27 @@ Translator.locale = 'it'
 
 {% block content %}
 <div class="row">
+    <div class="col-md-12">
+        <!-- BEGIN SAMPLE TABLE PORTLET-->
+        <div class="portlet box red">
+            <div class="portlet-title">
+                <div class="caption"><i class="fa fa-envelope"></i>Scrivi email a tutti</div>
+                <div class="tools">
+                    <a href="javascript:;" class="expand"></a>
+                </div>
+            </div>
+            <div class="portlet-body display-hide">
+                {% form_theme form 'MetronicAdminBundle::form/empty.html.twig' %}
+                {{ form_start(form) }}
+                {{ form_widget(form) }}
+                {{ form_end(form) }}
+            </div>
+        </div>
+        <!-- END SAMPLE TABLE PORTLET-->
+
+    </div>
+</div>
+<div class="row">
     <div class="col-md-6">
         <!-- BEGIN SAMPLE TABLE PORTLET-->
         <div class="portlet box yellow">
@@ -42,10 +63,10 @@ Translator.locale = 'it'
                         <tbody>
                     {% for entity in pagination %}
                             <tr>                            
-                                <td><a href="{{ path('contatti_show', { 'id': entity.id }) }}">{{ entity.id }}</a></td>
+                                <td>{{ entity.id }}</td>
                                 <td>{{ entity.email }}</td>
                                 <td>{% if entity.createdAt %}{{ entity.createdAt|date('Y-m-d H:i:s') }}{% endif %}</td>
-                                <td><a href="{{ path('contatti_show', { 'id': entity.id }) }}">Apri</a></td>
+                                <td><button class="btn yellow btn-xs" onclick="window.location='{{ path('contatti_show', { 'id': entity.id }) }}';">Apri</button></a></td>
                             </tr>
                     {% endfor %}
                         </tbody>
@@ -102,27 +123,6 @@ Translator.locale = 'it'
             </div>
         </div>
         <!-- END SAMPLE TABLE PORTLET-->
-    </div>
-</div>
-<div class="row">
-    <div class="col-md-12">
-        <!-- BEGIN SAMPLE TABLE PORTLET-->
-        <div class="portlet box red">
-            <div class="portlet-title">
-                <div class="caption"><i class="fa fa-envelope"></i>Scrivi email a tutti</div>
-                <div class="tools">
-                    <a href="javascript:;" class="expand"></a>
-                </div>
-            </div>
-            <div class="portlet-body display-hide">
-                {% form_theme form 'MetronicAdminBundle::form/empty.html.twig' %}
-                {{ form_start(form) }}
-                {{ form_widget(form) }}
-                {{ form_end(form) }}
-            </div>
-        </div>
-        <!-- END SAMPLE TABLE PORTLET-->
-
     </div>
 </div>
 {% endblock %}
