--- a/app/Resources/views/email.html.twig
+++ b/app/Resources/views/email.html.twig
@@ -1,3 +1,4 @@
 {% set nocostumizerstyle = false %}
 {% extends "MetronicAdminBundle::email.html.twig" %}
+{% block logotitle %}World Sticker Price{% endblock logotitle %}
 {% block title %}World Sticker Price{% endblock title %}
