--- a/src/Metronic/AdminBundle/Resources/views/email.html.twig
+++ b/src/Metronic/AdminBundle/Resources/views/email.html.twig
@@ -164,7 +164,7 @@
                             <tr>
                                 <td align="left" valign="middle" style="padding-left:20px;">
                                     <a href="{{ url('home') }}">
-                                        <img src="{{ url('home') ~ logo }}" width="86px" height="14px" alt="Metronic logo"/>
+                                        <img src="{{ url('home') ~ logo }}" alt="{% block logotitle %}Metronic logo{% endblock logotitle %}"/>
                                     </a>
                                 </td>
                             </tr>
