--- a/src/WSP/PromoBundle/Resources/views/Contatto/index.html.twig
+++ b/src/WSP/PromoBundle/Resources/views/Contatto/index.html.twig
@@ -56,8 +56,8 @@ Translator.locale = 'it'
                             <tr>
                                 <th>#</th>
                                 <th>Email</th>
-                                <th>Data contatto <i>(solleciti)</i></th>
-                                <th># messaggi</th>
+                                <th class="hidden-xs">Data contatto <i>(solleciti)</i></th>
+                                <th># mex</th>
                                 <th width="40" class="TAC">Op.</th>
                             </tr>
                         </thead>
@@ -66,7 +66,7 @@ Translator.locale = 'it'
                             <tr>                            
                                 <td>{{ entity.id }}</td>
                                 <td>{{ entity.email }}</td>
-                                <td>
+                                <td class="hidden-xs">
                                     {% if entity.createdAt %}{{ entity.createdAt|date('d/m/Y') }}{% endif %}
                                     {% if entity.solleciti|length > 0 %}({{ entity.solleciti|length }}){% endif %}
                                 </td>
@@ -102,8 +102,8 @@ Translator.locale = 'it'
                             <tr>
                                 <th>#</th>
                                 <th>Subject</th>
-                                <th>Inviata il</th>
-                                <th># contatti</th>
+                                <th class="hidden-xs">Inviata il</th>
+                                <th># cont</th>
                                 <th width="40" class="TAC">Op.</th>
                             </tr>
                         </thead>
@@ -112,7 +112,7 @@ Translator.locale = 'it'
                             <tr>                            
                                 <td>{{ entity.id }}</td>
                                 <td>{{ entity.subject }}</td>
-                                <td>{% if entity.createdAt %}{{ entity.createdAt|date('d/m/Y H:i:s') }}{% endif %}</td>
+                                <td class="hidden-xs">{% if entity.createdAt %}{{ entity.createdAt|date('d/m/Y H:i:s') }}{% endif %}</td>
                                 <td>{{ entity.destinatari|length }}/{{ pagination.totalItemCount }}</td>
                                 <td><button class="btn green btn-xs" onclick="$('#body-{{ entity.id }}').toggle();">Leggi</button></td>
                             </tr>
