--- a/src/WSP/PromoBundle/Resources/views/Default/simple.html.twig
+++ b/src/WSP/PromoBundle/Resources/views/Default/simple.html.twig
@@ -43,7 +43,7 @@ crossfade('block', 12000, 1000, 1);
 </hgroup>
 <div class="header navbar navbar-inverse navbar-fixed-top trasparent">
     <ul class="social-icons margin10">
-        <li><a href="https://www.facebook.com/wsprice.it?ref=hl" data-original-title="Facebook" class="facebook"></a></li>
+        <li><a target="_blank" href="https://www.facebook.com/wsprice.it?ref=hl" data-original-title="Facebook" class="facebook"></a></li>
         <li><a href="javascript:alert('Il video di presentazione sarà presto online!')" data-original-title="Youtube" class="youtube"></a></li>
     </ul>
 </div>
