Messaggio con foto (da testare)

--- a/app/Resources/views/baseJs.html.twig
+++ b/app/Resources/views/baseJs.html.twig
@@ -1,6 +1,6 @@
 {% set nocostumizerstyle = false %}
 {% set compress = true %}
-{% extends "MetronicAdminBundle::base.html.twig" %}
+{% extends "MetronicAdminBundle::baseHeadJs.html.twig" %}
 {% block title %}World Sticker Price{% endblock title %}
 {% block basecss %}
 {% if compress is defined and compress %}
