--- a/src/WSP/PromoBundle/Resources/views/Contatto/index.html.twig
+++ b/src/WSP/PromoBundle/Resources/views/Contatto/index.html.twig
@@ -1,16 +1,28 @@
 {% set page_title = 'Contatti' %}
 {% set page_subtitle = '<i class="fa fa-envelope-o" style="font-size: 2em;"></i>' %}
 
-{% extends '::base.html.twig' %}
+{% extends '::baseJs.html.twig' %}
 
 {% block js %}
-<script src="/bundles/ephputility/js/commons/sugar-1.3.9.min.js" type="text/javascript"></script>
-<script src="/bundles/ephputility/js/functions.js" type="text/javascript"></script>
-<script type="text/javascript" src="{{ url('bazinga_jstranslation_js') }}"></script>
+    {% javascripts  
+        '@EphpUtilityBundle/Resources/public/js/commons/sugar-1.3.9.min.js'
+        '@EphpUtilityBundle/Resources/public/js/functions.js'
+    %}
+    <script type="text/javascript" src="{{ asset_url }}"></script>
+    {% endjavascripts %}                
+    <script type="text/javascript" src="{{ url('bazinga_jstranslation_js') }}"></script>
 {% endblock %}
 
 {% block ready_js %}
 Translator.locale = 'it'
+{% endblock %}
+
+{% block inline_css %}
+div.uploader {
+    width: 100% !important;
+    background-image: none;
+    height: auto;
+}
 {% endblock %}
 
 {% block content %}
@@ -27,7 +39,16 @@ Translator.locale = 'it'
             <div class="portlet-body display-hide">
                 {% form_theme form 'MetronicAdminBundle::form/empty.html.twig' %}
                 {{ form_start(form) }}
-                {{ form_widget(form) }}
+                {{ form_widget(form.subject) }}
+                {{ form_widget(form.body) }}
+                {{ render(controller('EphpDragDropBundle:Render:uploadNf')) }}
+                {{ form_rest(form) }}
+                {% javascripts  
+                    '@EphpUtilityBundle/Resources/public/js/check_sanitize_regexp.js'
+                    '@WSPPromoBundle/Resources/public/js/upload.js'
+                %}
+                    <script type="text/javascript" src="{{ asset_url }}"></script>
+                {% endjavascripts %}                
                 {{ form_end(form) }}
             </div>
         </div>
