--- a/src/WSP/PromoBundle/Resources/views/Contatto/email.txt.twig
+++ b/src/WSP/PromoBundle/Resources/views/Contatto/email.txt.twig
@@ -1,3 +1,8 @@
 {{ messaggio.subject }}
 
 {{ messaggio.body }}
+
+Questa mail ti è stata inviata perché ti sei registrato su World Sticker Price e ci hai autorizzati ad inviarti le nostre comunicazioni in formato elettronico. 
+Se non vuoi più riceverla, mandaci una mail a staff@wsprice.it
+ATTENZIONE: non rispondete a questa email, l'indirizzo è utilizzato solo per gli invii e non prevede possibilità di ricezione.
+Copyright © 2014 World Sticker Price
