--- a/src/Metronic/AdminBundle/Resources/views/email.html.twig
+++ b/src/Metronic/AdminBundle/Resources/views/email.html.twig
@@ -90,7 +90,7 @@
                 text-align: left;
             }
             .textwhite { 
-                color: #fff;
+                color: #fff !important;
                 font-family: Open Sans;
                 font-size: 13px;
                 line-height: 150%;
@@ -195,14 +195,14 @@
                     <center>
                         <table border="0" cellpadding="0" cellspacing="0" width="600px" style="height:100%;">
                             <tr>
-                                <td align="right" valign="middle" class="textwhite" style="font-size:12px;padding:20px;">
+                                <td align="center" valign="middle" style="font-size:9px;padding:20px;color:#888;">
                                     {% block unsubscribe %}
                                         {% if unsibscribe is defined %} 
                                         If you do not wish to receive this newsletter, you can <a href="#" class="fontwhite">click here to unsubscribe</a>.  
                                         <br /><br />
                                         {% endif %}
+                                        &copy; 2013 {{ page_title }}.
                                     {% endblock unsubscribe %}
-                                    &copy; 2013 {{ page_title }}.
                                 </td>
                             </tr>
                         </table>
