--- a/src/WSP/PromoBundle/Resources/views/Contatto/email.html.twig
+++ b/src/WSP/PromoBundle/Resources/views/Contatto/email.html.twig
@@ -7,14 +7,18 @@
 <br />
 <div class="textdark">
     {% if messaggio.foto %}
-    <img src="{{ url('home') }}{{ messaggio.foto.urls.url }}" alt="World Sticker Price" title="World Sticker Price" style="max-width: 600px;"/><br/><br/>
+    <a href="{{ url('home') }}{{ messaggio.foto.urls.url }}">
+        <img src="{{ url('home') }}{{ messaggio.foto.urls.url }}" alt="World Sticker Price" title="World Sticker Price" style="max-width: 600px;"/></a>
+    <br/>
+    <br/>
     {% endif %}
     {{ messaggio.body|nl2br }}
 </div>
 {% endblock content %}
 
 {% block unsubscribe %}
-Questa newsletter ti è stata inviata perché ti sei registrato su <a href="{{ url('home') }}" style="color: #999;">World Sticker Price</a> e ci hai autorizzati ad inviarti le nostre comunicazioni in formato elettronico.<br/>
+Questa newsletter ti è stata inviata perché ti sei registrato su <a href="{{ url('home') }}" style="color: #999;">World Sticker Price</a> 
+e ci hai autorizzati ad inviarti le nostre comunicazioni in formato elettronico.
 Se non vuoi più riceverla, mandaci una mail a <a href="mailto:staff@wsprice.it" style="color: #999;">staff@wsprice.it</a><br/>
 <b>ATTENZIONE</b>: non rispondete a questa email, l'indirizzo è utilizzato solo per gli invii e non prevede possibilità di ricezione.<br/> 
 Copyright © 2014 World Sticker Price
