Pre YUI Compressor

--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -17,7 +17,8 @@
 
         '@EphpUtilityBundle/Resources/public/css/utility.css'
         '@WSPAdminBundle/Resources/public/css/custom.css'
-    %}
+     %}
+  {#   filter='yui_css' %} #}
         <link href="{{ asset_url }}" rel="stylesheet" type="text/css" />
     {% endstylesheets %}
     <link href="{{ asset('/bundles/metronicadmin/css/themes/default.css') }}" rel="stylesheet" type="text/css" id="style_color"/>
