--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -1,4 +1,4 @@
-{% set nocostumizerstyle = false %}
+{% set nocostumizerstyle = true %}
 {% set compress = true %}
 {% extends "MetronicAdminBundle::base.html.twig" %}
 {% block title %}World Sticker Price{% endblock title %}
@@ -18,7 +18,6 @@
         '@EphpUtilityBundle/Resources/public/css/utility.css'
         '@WSPAdminBundle/Resources/public/css/custom.css'
      %}
-  {#   filter='yui_css' %} #}
         <link href="{{ asset_url }}" rel="stylesheet" type="text/css" />
     {% endstylesheets %}
     <link href="{{ asset('/bundles/metronicadmin/css/themes/default.css') }}" rel="stylesheet" type="text/css" id="style_color"/>
