--- a/src/WSP/PromoBundle/Resources/views/Contatto/email.html.twig
+++ b/src/WSP/PromoBundle/Resources/views/Contatto/email.html.twig
@@ -7,7 +7,7 @@
 <br />
 <div class="textdark">
     {% if messaggio.foto %}
-    <a href="{{ url('home') }}{{ messaggio.foto.urls.url }}">
+    <a href="{{ url('home') }}">
         <img src="{{ url('home') }}{{ messaggio.foto.urls.url }}" alt="World Sticker Price" title="World Sticker Price" style="max-width: 600px;"/></a>
     <br/>
     <br/>
