--- a/src/WSP/ACLBundle/Resources/views/Negozio/form.html.twig
+++ b/src/WSP/ACLBundle/Resources/views/Negozio/form.html.twig
@@ -2,20 +2,28 @@
 {% form_theme form 'MetronicAdminBundle::form/empty.html.twig' %}
 
 {% block css %}
-<link href="/bundles/ephputility/css/utility.css" rel="stylesheet" type="text/css"/>
-<link href="/bundles/wspadmin/css/custom.css" rel="stylesheet" type="text/css"/>
-<link href="/bundles/metronicadmin/plugins/bootstrap-datepicker/css/datepicker.css" rel="stylesheet" type="text/css"/>
+{% stylesheets 
+    '@EphpUtilityBundle/Resources/public/css/utility.css'
+    '@WSPAdminBundle/Resources/public/assetic/css/custom.css'
+    '@MetronicAdminBundle/Resources/public/plugins/bootstrap-datepicker/css/datepicker.css'
+%}
+    <link href="{{ asset_url }}" rel="stylesheet" type="text/css" />
+{% endstylesheets %}
 {% endblock %}
 
 {% block js %}
-<script src="/bundles/metronicadmin/plugins/jquery-validation/src/jquery.validate.min.js" type="text/javascript"></script>
-<script src="/bundles/metronicadmin/plugins/jquery-validation/src/additional-methods.min.js" type="text/javascript"></script>
-<script src="/bundles/metronicadmin/plugins/bootstrap-datepicker/js/bootstrap-datepicker.js" type="text/javascript"></script>
-<script src="/bundles/metronicadmin/plugins/bootstrap-datepicker/js/locales/bootstrap-datepicker.it.js" type="text/javascript"></script>
-<script src="/bundles/wspadmin/js/soft.js" type="text/javascript"></script>
 <script src="http://maps.google.com/maps/api/js?sensor=true" type="text/javascript"></script>
-<script src="/bundles/metronicadmin/plugins/gmaps/gmaps.js" type="text/javascript"></script>
-<script src="/bundles/wspacl/js/step{{ step }}.js" type="text/javascript"></script>
+{% javascripts  
+    '@MetronicAdminBundle/Resources/public/plugins/jquery-validation/src/jquery.validate.min.js'
+    '@MetronicAdminBundle/Resources/public/plugins/jquery-validation/src/additional-methods.min.js'
+    '@MetronicAdminBundle/Resources/public/plugins/bootstrap-datepicker/js/bootstrap-datepicker.js'
+    '@MetronicAdminBundle/Resources/public/plugins/bootstrap-datepicker/js/locales/bootstrap-datepicker.it.js'
+    '@WSPAdminBundle/Resources/public/js/soft.js'
+    '@MetronicAdminBundle/Resources/public/plugins/gmaps/gmaps.js'
+%}  
+<script type="text/javascript" src="{{ asset_url }}"></script>
+{% endjavascripts %}  
+<script src="{{asset('/bundles/wspacl/js/step'~step~'.js')}}" type="text/javascript"></script>
 <script type="text/javascript" src="{{ url('bazinga_jstranslation_js', { 'domain': 'WSPACL' }) }}"></script>
 {% endblock %}
 
