--- a/src/WSP/ACLBundle/Resources/views/Negozio/index.html.twig
+++ b/src/WSP/ACLBundle/Resources/views/Negozio/index.html.twig
@@ -4,13 +4,21 @@
 {% extends '::base.html.twig' %}
 
 {% block css %}
-<link href="/bundles/metronicadmin/plugins/bootstrap-fileupload/bootstrap-fileupload.css" rel="stylesheet" type="text/css" />
-<link href="/bundles/metronicadmin/css/pages/profile.css" rel="stylesheet" type="text/css" />
+{% stylesheets 
+    '@MetronicAdminBundle/Resources/public/plugins/bootstrap-fileupload/bootstrap-fileupload.css'
+    '@MetronicAdminBundle/Resources/public/css/pages/profile.css'
+%}
+    <link href="{{ asset_url }}" rel="stylesheet" type="text/css" />
+{% endstylesheets %}
 {% endblock css %}
 
 {% block js %}
-<script type="text/javascript" src="/bundles/metronicadmin/plugins/bootstrap-fileupload/bootstrap-fileupload.js"></script>
-<script src="/bundles/wspacl/js/negozio.js" type="text/javascript"></script>
+{% javascripts  
+    '@MetronicAdminBundle/Resources/public/plugins/bootstrap-fileupload/bootstrap-fileupload.js'
+    '@WSPACLBundle/Resources/public/js/negozio.js'
+%}
+    <script type="text/javascript" src="{{ asset_url }}"></script>
+{% endjavascripts %}  
 {% endblock js %}
 
 {% block ready_js %}
