--- a/src/WSP/PromoBundle/Resources/views/Default/simple.html.twig
+++ b/src/WSP/PromoBundle/Resources/views/Default/simple.html.twig
@@ -43,8 +43,8 @@ crossfade('block', 12000, 1000, 1);
 </hgroup>
 <div class="header navbar navbar-inverse navbar-fixed-top trasparent">
     <ul class="social-icons margin10">
-        <li><a target="_blank" href="https://www.facebook.com/wsprice.it?ref=hl" data-original-title="Facebook" class="social-icon social-icon-color facebook"></a></li>
-        <li><a target="_blank" href="http://www.youtube.com/watch?v=ZQ1ZaP9CTBg" data-original-title="Youtube" class="social-icon social-icon-color youtube"></a></li>
+        <li><a target="_blank" href="https://www.facebook.com/wsprice.it?ref=hl" data-original-title="Facebook" class="social-icon-color facebook"></a></li>
+        <li><a target="_blank" href="http://www.youtube.com/watch?v=ZQ1ZaP9CTBg" data-original-title="Youtube" class="social-icon-color youtube"></a></li>
     </ul>
 </div>
 {% endblock %}
